# ModelFactory

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  app.py  architecture_final.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
.streamlit/: config.toml
config/: model_registry.yaml  pipeline_config.yaml
databricks/: databricks.yml
databricks/notebooks/: 01_data_ingestion.py  02_feature_engineering.py  03_model_training.py  04_batch_inference.py  05_monitoring.py
frontend/: pipeline_runner.py
infrastructure/terraform/: example.tfvars  main.tf  outputs.tf  variables.tf
monitoring/: drift_report_config.json
orchestration/: __init__.py  databricks_workflow.json  pipeline_runner.py
pages/: Architecture.py
scripts/: ci_pipeline.py
src/: __init__.py  batch_inference.py  compliance.py  data_ingestion.py  feature_engineering.py  feature_store.py  model_dag.py  model_monitoring.py  model_training.py  utils.py
tests/: test_compliance.py  test_feature_engineering.py  test_feature_store.py  test_model_dag.py  test_model_training.py
